# RandomGeneratorLibrary

./: CMakeLists.txt  README.md
include/: RandomGenerator.h
samples/: CMakeLists.txt  main.cpp
